# the-chaos

./: test.excalidraw
connect4/: Cargo.toml  README.md
connect4/src/: main.rs
excalidraw-stuff/: images.excalidraw
exdraw/: Cargo.toml  youtube.excalidraw
exdraw/src/: lib.rs
rust-flat-dir/: Cargo.toml  main.rs
