[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
thiserror = "1.0.41"
tracing = "0.1.27"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"

[profile.release]
debug = true